@@ -10,6 +10,8 @@
 
  * Highlighting: Added back in the preferences to new preferences system.
 
+ * DCCSupport: Added back in the preferences to new preferences system
+
 2005-06-08 Andrew Ruder <aeruder@ksu.edu>
  * GNUstepOutput: Changed /scrollback lines to work with new scrollback
  history mechanism.  Obsoleted several unused preferences. ;)
